09/12/2011

Added BlockAnalyser delegate to cater for nest block parsing correctly.

05/12/2011

Added method to block node to know if it contains an answer expression. Start
of work to support ^ from blocks.

04/12/2011

Fixed a bug with nested blocks.
Initialize temporaries to nil (UndefinedObject).
Added some required methods to Object and UndefinedObject.

03/12/2011

Fixed bug with tightly nested blocks.
Removed some extra output.

01/12/2011

Added -e options to command line. There is a bug in getting options with quotes in them.
Fixing a.s.a.p

27/11/2011

Modified whileTrue/whileFalse support to ensure block yield responds to ifTrue:/ifFalse:

26/11/2011

Added support for nexted expressions, ie: (expression).
Added primitive support for [] whileNil: and whileNotNil:.
Added support for dispath in Stout.
Changed call from INVOKEVIRTUAL to INVOKEINTERFACE. NoOp router being called.
Added routing support for Stout. Can now invoke blocks based on route.
Add [] whileTrue/whileFalse support
Fixed variable registration to not try and register "" as a variable
Added a simple test runner to the integration-test phase of Maven
Added a simple assertion facility in Assert.st

25/11/2011 Changes

Full block access to outside variables.
Fixed bug with creation of variables.

24/11/2011 Changes

Finished Block access to variables outside of the block.

23/11/2011 Changes

Merges upstream changes, fixed conflicts and added meven plugin compiler version.

22/11/2011 Changes

Added argument to variable lookup to cater for outercontext lookups when in blocks.
Ensuring that the class initialize method gets invoked for each created class.

21/11/2011 Changes

Added cascaded KeywordMessageElement processing.
Added cascaded BinaryMessageElement processing.

20/11/2011 Changes

Added bootstrap methods to accept each of the class creation cascade messages. 

19/11/2011 Changes

Block access to outcontext Method Arguments now working.